syntax = "proto2";

package qcraft;
option go_package = "qcraft-proto.ai/onboard/lite/transport/proto/image_sender_service";

import "onboard/proto/camera.proto";

message SendImageRequest {
  optional CameraId camera_id = 1;
  optional ImageInfo image_info = 2;
  optional bytes encoded_image = 3;
}

message SendImageResponse {
  optional string message = 1;
}

service ImageSender {
  rpc SendImage(SendImageRequest) returns (SendImageResponse);
}